# easy_tiger

./: .gitignore  .gitmodules  Cargo.toml  NOTES.md  README.md  build.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
benches/: coding.rs  distance.rs
bulk_load/: Cargo.toml
bulk_load/src/: main.rs
docs/: design.md  implementation_notes.md
et/: Cargo.toml
et/src/: bulk_load.rs  chrng.rs  compute_neighbors.rs  compute_neighbors_wgpu.rs  delete.rs  drop_index.rs  exhaustive_search.rs  flat.rs  generate.rs  hcrng.rs  init_index.rs  insert.rs  lookup.rs  main.rs  mongodump.rs  neighbor_util.rs  partition_reorder.rs  quantization.rs  quantization_recall.rs  recall.rs  search.rs  spann.rs  spann_load.rs  test_kmeans.rs  ui.rs  vamana.rs  vector_table_load.rs  wt_args.rs  wt_stats.rs
et/src/chrng/: analyze_graph.rs  search.rs
et/src/compute_neighbors/: cpu.rs  gpu.rs  mod.rs
et/src/flat/: drop_index.rs  init_index.rs  insert_vectors.rs  search.rs
et/src/mongodump/: README.md  extract_archive_vectors.rs  parser.rs  read.rs  spec.md
et/src/quantization/: distance_loss.rs  loss.rs  recall.rs  residuals.rs  rotate.rs
et/src/spann/: bulk_load.rs  centroid_stats.rs  closest_centroid.rs  copy.rs  delete_sim.rs  drop_index.rs  export_head.rs  extract.rs  init_index.rs  insert_vectors.rs  rebalance.rs  search.rs  verify_primary_assignments.rs
et/src/vamana/: bulk_load.rs  check_reachability.rs  delete.rs  drop_index.rs  init_index.rs  insert.rs  lookup.rs  reinsert.rs  search.rs
pt/: Cargo.toml
pt/src/: main.rs
qt/: Cargo.toml
qt/src/: main.rs
scripts/: parse_trace.py  plot_duration.py  plot_insert_batch.py  plot_split_centroid_duration_searches.py
src/: bulk.rs  chrng.rs  crud.rs  distance.rs  flat.rs  graph.rs  graph_clustering.rs  hcrng.rs  input.rs  kmeans.rs  lib.rs  partition_reorder.rs  posting_block.rs  quantization.rs  query_distance.rs  recall.rs  scoring.rs  search.rs  spann.rs  test.rs  vamana.rs  vector_table.rs  worker_pool.rs  wt.rs
src/chrng/: clustering.rs  search.rs  wt.rs
src/flat/: search.rs
src/hcrng/: clustering.rs
src/scann/: kmeans.rs  mod.rs  tree.rs
src/spann/: bulk.rs  centroid_stats.rs  postings.rs  rebalance.rs  search.rs
src/vamana/: bulk.rs  crud.rs  graph.rs  mutate.rs  search.rs  wt.rs
src/vectors/: binary.rs  float16.c  float16.rs  float32.rs  i8naive.rs  lucene.rs  lvq.c  lvq.rs  mixed.rs  mixed_rep.rs  mod.rs  raw.rs  scaled_non_uniform.rs  scaled_uniform.rs  truncated.rs
src/vectors/lvq/: aarch64.rs  scalar.rs  x86_64.rs
vectors/: Cargo.toml  build.rs
vectors/benches/: coding.rs  distance.rs
vectors/src/: binary.rs  float16.c  float16.rs  float32.rs  lib.rs  lvq.c  lvq.rs  quiver.rs  rotate.rs  scaled_uniform.rs  soar.rs  truncated.rs  turbo_quant.rs
vectors/src/lvq/: aarch64.rs  scalar.rs  test.rs  x86_64.rs
vectors/src/turbo_quant/: codebook.rs  packing.rs  rotate.rs
wt_mdb/: Cargo.toml
wt_mdb/src/: config.rs  connection.rs  lib.rs  options.rs  record_cursor.rs  session.rs  timestamp.rs  transaction.rs
wt_mdb/src/session/: format.rs  index_cursor.rs  metadata_cursor.rs  mod.rs  packing.rs  raw_cursor.rs  record_cursor.rs  stat_cursor.rs  typed_cursor.rs
wt_sys/: Cargo.toml  build.rs
wt_sys/src/: lib.rs
