[package]
name = "easy_tiger"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.23.0"
crossbeam-skiplist = "0.1.3"
half = "2.6.0"
leb128 = "0.2.5"
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
rand = "0.9.1"
rayon = "1.10.0"
rustix = "1.0.7"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.132"
simsimd = { version = "6.5.0" }
stable_deref_trait = "1.2.0"
thread_local = "1.1.8"
tracing = "0.1.41"
wt_mdb = { path = "./wt_mdb" }

[dev-dependencies]
criterion = "0.7.0"
rand_xoshiro = "0.7.0"
tempfile = "3.20.0"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "coding"
harness = false

[workspace]
members = ["et", "pt", "qt", "wt_mdb", "wt_sys"]

[profile.profiling]
inherits = "release"
debug = true
