[package]
name = "easy_tiger"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.23.0"
crossbeam-skiplist = "0.1.3"
half = "2.6.0"
leb128 = "0.2.5"
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
min-max-heap = "1.3.0"
rand = "0.9.1"
rayon = "1.10.0"
rustix = "1.0.7"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.132"
simsimd = { version = "6.5.0" }
stable_deref_trait = "1.2.0"
thread_local = "1.1.8"
tracing = "0.1.41"
vectors = { path = "./vectors" }
wt_mdb = { path = "./wt_mdb" }

[dev-dependencies]
approx = "0.5.1"
rand_xoshiro = "0.7.0"
tempfile = "3.20.0"

[build-dependencies]
cc = "1.2.31"

[workspace]
members = ["et", "vectors", "wt_mdb", "wt_sys"]

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
debug = true
