[package]
name = "bulk_load"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
wt_mdb = { path = "../wt_mdb" }
easy_tiger = { path = "../" }
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
indicatif = "0.17.8"

[profile.profiling]
inherits = "release"
debug = true