[package]
name = "et"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.23.1"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-utils = "0.8.21"
easy_tiger = { path = "../" }
histogram = "0.11.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
rand = "0.9.1"
rand_xoshiro = "0.7.0"
rayon = "1.10.0"
stable_deref_trait = "1.2.0"
thread_local = "1.1.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
vectors = { path = "../vectors" }
wt_mdb = { path = "../wt_mdb" }
wt_sys = { path = "../wt_sys" }

[features]
serial_search = []
