[package]
name = "et"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true }
pollster = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
crossbeam-utils = { workspace = true }
easy_tiger = { path = "../" }
histogram = { workspace = true }
indicatif = { workspace = true, features = ["rayon"] }
memmap2 = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stable_deref_trait = { workspace = true }
thread_local = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vectors = { path = "../vectors" }
wt_mdb = { path = "../wt_mdb" }
wt_sys = { path = "../wt_sys" }

[features]
serial_search = []
wgpu = ["dep:wgpu", "dep:pollster"]
