[package]
name = "pt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
easy_tiger = { path = "../" }
histogram = "0.11.3"
indicatif = "0.17.11"
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
rand = "0.8.5"
stable_deref_trait = "1.2.0"
