[package]
name = "vectors"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
half = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
thread_local = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "coding"
harness = false
